# tubesync

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: clean-up.yml  docker.yml  keepalive.yml  scheduler.yml  test-conda.yml  test-poetry.yml
docker/services/bilibili/: run
docker/services/youtube/: run
scripts/: fetch-all-bilibili.py  fetch-all-youtube.py
tubesync/: bilibili.py  youtube.py
